--- a/ImageOrganizer/ImageOrganizer/ImageOrganizer.csproj
+++ b/ImageOrganizer/ImageOrganizer/ImageOrganizer.csproj
@@ -112,8 +112,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CameraImporter.cs" />
+    <Compile Include="ConfigurationManager.cs" />
+    <Compile Include="ImageProcessor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SettingsManager.cs" />
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
