--- a/ImageOrganizer/ImageOrganizer/ImageOrganizer.csproj
+++ b/ImageOrganizer/ImageOrganizer/ImageOrganizer.csproj
@@ -70,7 +70,13 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>ImageOrganizer_TemporaryKey.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MediaDevices, Version=1.10.0.0, Culture=neutral, PublicKeyToken=36ac35b4ea7a1f67, processorArchitecture=MSIL">
@@ -122,7 +128,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="ImageOrganizer_TemporaryKey.pfx" />
     <None Include="MediaDevices.chm" />
     <None Include="packages.config" />
     <None Include="Properties\app.manifest" />
