--- a/ImageOrganizer/ImageOrganizer/ImageOrganizer.csproj
+++ b/ImageOrganizer/ImageOrganizer/ImageOrganizer.csproj
@@ -124,7 +124,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingsManager.cs" />
+    <Compile Include="UpdateChecker.cs" />
     <Compile Include="Utilities.cs" />
+    <Compile Include="VersionHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
